redeploy token with gas price 10 Gwei

--- a/conf/config.mainnet.yaml
+++ b/conf/config.mainnet.yaml
@@ -3,7 +3,7 @@ server:
 ethereum:
   socket: /home/ethereum/.ethereum/geth.ipc
   wallet:
-    key_file: data/wallets/owner
+    file: data/wallets/owner
   address:
     token: 0xa6bc42627172cd1da4e3218293df826a37b69131
     crowdsale: 0xa6bc42627172cd1da4e3218293df826a37b69131
